--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "telegraf": "^4.9.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node src/index.js"
   },
   "author": "",
   "license": "ISC"
