--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "dani",
   "version": "1.0.0",
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
+  },
   "description": "",
   "main": "src/index.js",
   "dependencies": {
@@ -8,7 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node src/index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC"
